# mindot

./: Cargo.toml  README.md
.github/workflows/: macos.yml  release.yml  rust.yml
src/: main.rs
