[package]
name = "mindot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
clap_complete = "4.1.4"
clean-path = "0.2.1"
dirs = "4.0.0"
fs_extra = "1.3.0"
serde_json = "1.0.94"
shellexpand = "2.1"
text_io = "0.1.12"
walkdir = "2.3.3"
